Fix grid alignment

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -142,8 +142,10 @@ $shadow-scrolling-panel-thumb: -2px -2px 5px rgba(0,0,0,0.4) inset,
 // === Dungeon ===
 // Placeholder palette until the dungeon themes get their own.
 $bg-dungeon:              #111;
+$bg-dungeon-floor:        #000;
 $fg-dungeon-wall:         #666;
 $fg-dungeon-wall-current: #9ac;
+$fg-dungeon-grid:         #333;
 $fg-dungeon-pad:          rgb(126,104,86);
 $fg-dungeon-stairs:       #776f5e;
 $fg-dungeon-stairs-hover: #b0a68e;
